kubernetes/archive/artifactory.yaml

apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: artifactory
  namespace: artifactory
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "artifactory.vpn.rjst.de"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        credentialName: artifactory-cert
        mode: SIMPLE
      hosts:
        - "artifactory.vpn.rjst.de"

---

apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: artifactory
  namespace: artifactory
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  hosts:
    - "artifactory.vpn.rjst.de"
  gateways:
    - artifactory
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: artifactory
            port:
              number: 8082
